--- a/web/splash/style.css
+++ b/web/splash/style.css
@@ -5,7 +5,7 @@ html {
 body {
   margin: 0;
   min-height: 100%;
-  background-color: #3092D0;
+  background-color: #191919;
   background-size: 100% 100%;
 }
 
